doc/install/kubernetes/first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
   app: webapp
   release: "0"
spec:
  containers:
  - name: webapp
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0
    
---

apiVersion: v1
kind: Pod
metadata:
  name: webapp-release-0-5
  labels:
   app: webapp
   release: "0-5"
spec:
  containers:
  - name: webapp
    image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
