doc/install/kubernetes/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: queue
  labels:
   app: queue
spec:
  containers:
  - name: queue
    image: richardchesterwood/k8s-fleetman-queue:release1  
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp  
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: richardchesterwood/k8s-fleetman-webapp-angular:release0
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfdb  
  template:
    metadata:
      labels:
        app: mfdb
    spec:
      containers:
        - name: mfdb
          image: holgerfischer/myfinance:0.13.0-SNAPSHOT-mfdb
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer  
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer   
          
---

apiVersion: v1
kind: Pod
metadata:
  name: mfupgrade
spec:
  containers:
  - name: mfupgrade
    image: holgerfischer/myfinance:0.13.0-SNAPSHOT-mfdbupgrade                    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfinance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myfinance  
  template:
    metadata:
      labels:
        app: myfinance
    spec:
      containers:
        - name: myfinance  
          image: holgerfischer/myfinance:0.13.0-SNAPSHOT-myfinance-full      
          tty: true
