doc/install/kubernetes/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfdb  
  template:
    metadata:
      labels:
        app: mfdb
    spec:
      containers:
        - name: mfdb
          image: holgerfischer/myfinance:0.13.0-SNAPSHOT-mfdb
          volumeMounts:
           - name: myfinancedata
             mountPath: /var/lib/postgresql/data
      volumes:
        - name: myfinancedata
          persistentVolumeClaim:
              claimName: mfdbpvc            

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer  
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer   
          
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfinance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myfinance  
  template:
    metadata:
      labels:
        app: myfinance
    spec:
      containers:
        - name: myfinance  
          image: holgerfischer/myfinance:0.13.0-SNAPSHOT-myfinance-full      
          tty: true     
          volumeMounts:
           - name: myfinanceconfig
             mountPath: /MyFinance/envconfig           
      volumes:
        - name: myfinanceconfig
          persistentVolumeClaim:
              claimName: mfconfigpvc
