doc/install/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
 name: mfdb
spec:
 #this defines which pod is going to be presented by this service
 selector:
  app: mfdb
 ports:
  - name: mfdb
    port: 5432
 type: ClusterIP  
 
---

apiVersion: v1
kind: Service
metadata:
 name: adminer
spec:
 #this defines which pod is going to be presented by this service
 selector:
  app: adminer
 ports:
  - name: adminer
    port: 8080
    nodePort: 30010
 type: NodePort 
 
---

apiVersion: v1
kind: Service
metadata:
 name: myfinance
spec:
 #this defines which pod is going to be presented by this service
 selector:
  app: myfinance
 ports:
  - name: http
    port: 8181
    nodePort: 30020
  - name: https
    port: 8443
    nodePort: 30021                   
 type: NodePort
