doc/install/kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: fleetman-webapp
spec:
 #this defines which pod is going to be presented by this service
 selector:
  app: webapp
  release: "0-5"
 ports:
  - name: http
    port: 80
    nodePort: 30080
 type: NodePort
